--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -177,7 +177,7 @@
               <!-- Lists-->
               <br>
               <h4 style="font-size: 24px">My First Research Project</h4>
-              <p>I was granted the opportunity to pursue my own research project. Since I am interested in potential future applications of virtual reality (VR), I explored combining the Oculus Rift with the Kinect to allow mobility and control in a virtual universe. <a href="http://www.reapwaterloo.ca/combining-microsoft-kinect-oculus-rift-unity3d/#more-362">Link to article</a></p>
+              <p>I was granted the opportunity to pursue my own research project. Since I am interested in potential future applications of virtual reality (VR), I explored combining the Oculus Rift with the Kinect to allow mobility and control in a virtual universe. <a href="http://www.reapwaterloo.ca/combining-microsoft-kinect-oculus-rift-unity3d/#more-362">Read article</a></p>
 
               <br>
 
@@ -209,13 +209,13 @@
     </section>
     <!-- About Section End -->
 
-    <!-- Services Section Start -->
+    <!-- Experiences Section Start -->
     <section id="" class="services section-padding">
       <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Other Experiences</h2>
       <div class="container">
         <div class="row">
-          <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-12">
+          <!-- SExperience item -->
+          <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
                 <i class="icon-layers"></i>
@@ -226,8 +226,8 @@
               </div>
             </div>
           </div>
-          <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-12">
+          <!-- SExperience item -->
+          <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
                 <i class="icon-bubbles"></i>
@@ -238,44 +238,22 @@
               </div>
             </div>
           </div>
-          <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-12">
-            <div class="services-item wow fadeInDown" data-wow-delay="1.4s">
-              <div class="icon">
-                <i class="icon-bubbles"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceGALL.html">Side Projects</a></h3>
-                <p>View a gallery</p>
-              </div>
-            </div>
-          </div>
+          <!-- Experience item -->
         </div>
       </div>
     </section>
-    <!-- Services Section End -->
+    <!-- Experiences Section End -->
+
 
     <!-- Footer Section Start -->
-    <footer class="footer-area section-padding">
+    <footer class="footer-area" style="padding-top: 15px; padding-bottom: 15px;"">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="footer-text text-center">
               <ul class="social-icon">
                 <li>
-                  <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
-                </li>
-                <li>
-                  <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
-                </li>
-                <li>
-                  <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
-                </li>
-                <li>
-                  <a class="instagram" href="#"><i class="icon-social-linkedin"></i></a>
-                </li>
-                <li>
-                  <a class="instagram" href="#"><i class="icon-social-google"></i></a>
+                  <a class="instagram" href="https://ca.linkedin.com/in/amydebbane"><i class="icon-social-linkedin"></i></a>
                 </li>
               </ul>
               <p>© 2018 by Amy Debbané</p>
