--- a/ExperienceTC.html
+++ b/ExperienceTC.html
@@ -232,25 +232,25 @@
     </section>
     <!-- About Section End -->
 
-    <!-- Services Section Start -->
+    <!-- Experiences Section Start -->
     <section id="" class="services section-padding">
       <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Other Experiences</h2>
       <div class="container">
         <div class="row">
-          <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-12">
+          <!-- Experience item -->
+          <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
                 <i class="icon-layers"></i>
               </div>
               <div class="services-content">
-                <h3><a href="ExperienceTC.html">UX Developer</a></h3>
+                <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
                 <p>Trillium Health Partners</p>
               </div>
             </div>
           </div>
-          <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-12">
+          <!-- Experience item -->
+          <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
                 <i class="icon-bubbles"></i>
@@ -261,44 +261,21 @@
               </div>
             </div>
           </div>
-          <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-12">
-            <div class="services-item wow fadeInDown" data-wow-delay="1.4s">
-              <div class="icon">
-                <i class="icon-bubbles"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceGALL.html">Side Projects</a></h3>
-                <p>View a gallery</p>
-              </div>
-            </div>
-          </div>
+          <!-- Experience item -->
         </div>
       </div>
     </section>
-    <!-- Services Section End -->
+    <!-- Experiences Section End -->
 
     <!-- Footer Section Start -->
-    <footer class="footer-area section-padding">
+    <footer class="footer-area" style="padding-top: 15px; padding-bottom: 15px;"">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="footer-text text-center">
               <ul class="social-icon">
                 <li>
-                  <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
-                </li>
-                <li>
-                  <a class="twitter" href="#"><i class="icon-social-twitter"></i></a>
-                </li>
-                <li>
-                  <a class="instagram" href="#"><i class="icon-social-instagram"></i></a>
-                </li>
-                <li>
-                  <a class="instagram" href="#"><i class="icon-social-linkedin"></i></a>
-                </li>
-                <li>
-                  <a class="instagram" href="#"><i class="icon-social-google"></i></a>
+                  <a class="instagram" href="https://ca.linkedin.com/in/amydebbane"><i class="icon-social-linkedin"></i></a>
                 </li>
               </ul>
               <p>© 2018 by Amy Debbané</p>
