edited about, contact, and responsive layout

--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -212,7 +212,7 @@
 
               <br>
 
-              <p>I ended up learning so much from the change management process and really enjoyed working with the team and decided to continue working part-time. Up to now I have worked on several projects from developing AI chatbots, to adding a new module from start to end. Seeing a project through required writing requirement documents, mockups, developing, deploying, testing, presenting it with stakeholders, and reiiterating.</p>
+              <p>I ended up learning so much from the change management process and really enjoyed working with the team and decided to continue working part-time. Up to now I have worked on several projects from developing AI chatbots, to adding a new module from start to end. Seeing a project through required writing requirement documents, mockups, developing, deploying, testing, presenting it with stakeholders, and reiiterating. <a href="index.html#contact">Ask me about my experience creating a test suite and module requirements</a>. </p>
               
 
             </div>
