--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
-            <div class="col-md-12 col-sm-12 text-center">
+            <div class="col-md-12 col-sm-4 text-center">
               <div class="contents">
                 <br>
                 <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Amy Debbané</h2>
@@ -147,7 +147,7 @@
       <div class="container">
         <div class="row">
           <!-- Services item -->
-          <div class="col-md-4 col-lg-3 col-xs-12">
+          <div class="col-md-4 col-lg-4 col-xs-4">
             <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
               <div class="icon">
                 <i class="icon-grid"></i>
@@ -160,7 +160,7 @@
             </div>
           </div>
           <!-- Experience item -->
-          <div class="col-md-4 col-lg-3 col-xs-12">
+          <div class="col-md-4 col-lg-4 col-xs-4">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
                 <i class="icon-grid"></i>
@@ -173,7 +173,7 @@
             </div>
           </div>
           <!-- Services item -->
-          <div class="col-md-4 col-lg-3 col-xs-12">
+          <div class="col-md-4 col-lg-4 col-xs-4">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
                 <img src="assets/img/icona.jpg">
@@ -205,25 +205,19 @@
             <div class="wow fadeInRight" data-wow-delay="0.3s">
               <h3>My Journey</h3>
               <br> 
-
               <p>Driven by curiosity, I decided to go to a hackathon (where large groups students pull all-nighters and create fun projects) and see what all the hype was about! At Hack the North 2016, I  fell in love with bringing my designs to life through code. I am fascinated by how people think, behave and work, and how technology impacts our daily lives.</p>
-
               <br>
-
               <p> Since I enjoyed it so much my goal was to eventually get an internship as a developer where I could still practice UX skills.</p>
-
               <br>
-
-              <p>I eventually started an internship at Trillium Health Partners as a UX developer. However, teaching myself development was not all rainbows and buterflies. Whenever I came accross a road block I got up and played a video game! Which also happened to be a great team building activity.</p>
-
-              <br>
-
-
-              <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i>Download Resume</a>
-              <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
-            </div>
-          </div>   
+            </div> 
+          </div>
         </div>
+          <div class="wow fadeInRight" data-wow-delay="0.3s">
+            <p>I eventually started an internship at Trillium Health Partners as a UX developer. However, teaching myself development was not all rainbows and butterflies. Whenever I came accross a road block I would go to a nearby park helping me take a step back and look at the bigger picture. My trips to the park happened to turn into an office step challenge which was a great team building activity that was great for our physical and mental health.</p>
+            <br>
+            <a href="#contact" class="btn btn-common"><i class="icon-paper-clip"></i>Download Resume</a>
+            <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
+          </div>   
       </div>
     </section>
     <!-- About Section End -->
@@ -233,52 +227,13 @@
    <div class="contact-form">
       <div class="container">
          <div class="row contact-form-area wow fadeInUp">
-            <div class="col-md-6 col-lg-6 col-sm-12">
-               <div class="contact-block">
-                  <h2>Contact Form</h2>
-                  <form id="contactForm" novalidate="true">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <div class="form-group">
-                              <input type="text" class="form-control" id="name" name="name" placeholder="Name" required="" data-error="Please enter your name">
-                              <div class="help-block with-errors"></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div class="form-group">
-                              <input type="text" placeholder="Email" id="email" class="form-control" name="email" required="" data-error="Please enter your email">
-                              <div class="help-block with-errors"></div>
-                           </div>
-                        </div>
-                        <div class="col-md-12">
-                           <div class="form-group">
-                              <input type="text" placeholder="Subject" id="msg_subject" class="form-control" required="" data-error="Please enter your subject">
-                              <div class="help-block with-errors"></div>
-                           </div>
-                        </div>
-                        <div class="col-md-12">
-                           <div class="form-group">
-                              <textarea class="form-control" id="message" placeholder="Your Message" rows="5" data-error="Write your message" required=""></textarea>
-                              <div class="help-block with-errors"></div>
-                           </div>
-                           <div class="submit-button">
-                      
-                              <button href="" class="btn btn-common disabled" onclick="confirmSent()" id="submit" type="submit" style="pointer-events: all; cursor: pointer;">Send Message</button> <script type="text/javascript"> function confirmSent(){alert("Hi [name], I look forward to continuing the conversation with you")} </script>
-                              <div id="msgSubmit" class="h3 text-center hidden"></div>
-                              <div class="clearfix"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </form>
-               </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-12">
+            <div class="col-md-12 col-lg-12 col-sm-12">
                <div class="footer-right-area wow fadeIn">
-                  <h2>Contact Information</h2>
+                  <h2>Start a Conversation with Me</h2>
                   <div class="footer-right-contact">
                      <div class="single-contact">
                         <div class="contact-icon">
-                           <i class="fa fa-map-marker"></i>
+                           <i class="fa fa-coffee"></i>
                         </div>
                         <p>Ottawa, CA</p>
                      </div>
@@ -292,7 +247,7 @@
                         <div class="contact-icon">
                            <i class="fa fa-phone"></i>
                         </div>
-                        <p><a href="#">+ (1) 613-618-7076</a></p>
+                        <p><a href="tel:1-613-618-7076">+ (1) 613-618-7076</a></p>
                      </div>
                   </div>
                </div>
@@ -315,6 +270,12 @@
                   <a class="instagram" href="https://ca.linkedin.com/in/amydebbane"><i class="icon-social-linkedin"></i></a>
                 </li>
               </ul>
+              <div class="footer-text text-center">
+                <a href="index.html#services">Experiences |</a>
+                <a href="index.html#about"> About |</a>
+                <a href="index.html#contact"> Contact</a>
+              
+              </div>
               <p>© 2018 by Amy Debbané</p>
             </div>
           </div>
