--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
-            <div class="col-md-12 col-sm-4 text-center">
+            <div class="col-md-12 col-sm-12 text-center">
               <div class="contents">
+                <br>
+                <br>
+                <br>
                 <br>
                 <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Amy Debbané</h2>
                 <ul>
@@ -95,10 +98,6 @@
                   <br>
                   Merging design thinking with software development
                 </p>
-                <br>
-                <br>
-                <br>
-                <br>
                 <br>
                 <br>
                 <!-- 3 columns -->
@@ -121,8 +120,7 @@
                     
                     <div class="col-xs-12 col-sm-4">
                       <div class="box">
-                        <p class="wow fadeInUp" data-wow-delay="0.7s">Nature Lover</p>
-                        <p class="wow fadeInUp"  data-wow-delay="0.7s">If I need to take a step back at work you can find me outside looking at the bigger picture</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.7s">Tree Hugger<p class="wow fadeInUp"  data-wow-delay="0.7s">If I need to take a step back at work you can find me outside looking at the bigger picture</p>
                       </div>
                     </div>
                     
@@ -137,9 +135,6 @@
         </div>
       </div>
       <!-- Hero Area End -->
-
-    </header>
-    <!-- Header Area wrapper End -->
 
     <!-- Experiences Section Start -->
     <section id="services" class="services section-padding">
