Edited REAP content

--- a/ExperienceTC.html
+++ b/ExperienceTC.html
@@ -106,7 +106,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h4 style="font-size: 24px">What is Trusted Clothes? </h4>
-              <p>Trusted Clothes is a non-profit organization linking people, organizations and brands that are ethical, environmentally friendly and health conscious. They are dedicated to promoting ethical, sustainable and healthy fashion.</p>
+              <p>Trusted Clothes is a non-profit organization linking people, organizations and brands that are ethical, environmentally friendly and health conscious. The team is dedicated to promoting ethical, sustainable and healthy fashion.</p>
 
               <br>
 
