--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -116,6 +116,10 @@
 
               <br>
               <br>
+              <h4 style="font-size: 24px">My Role at REAP</h4>
+               <p>I was granted the opportunity to pursue my own research projects using any of the technology offered in the lab. For my first project, I explored combining the Oculus Rift with the Kinect to allow mobility and control in a virtual universe, since I was drawn to finding applications for virtual reality (VR). <a href="http://www.reapwaterloo.ca/combining-microsoft-kinect-oculus-rift-unity3d/#more-362">Read article</a></p>
+
+              <br>
 
               <!-- Lists -->
               <div id="resume">
@@ -177,31 +181,19 @@
               <!-- Lists-->
               <br>
               <h4 style="font-size: 24px">My First Research Project</h4>
-              <p>I was granted the opportunity to pursue my own research project. Since I am interested in potential future applications of virtual reality (VR), I explored combining the Oculus Rift with the Kinect to allow mobility and control in a virtual universe. <a href="http://www.reapwaterloo.ca/combining-microsoft-kinect-oculus-rift-unity3d/#more-362">Read article</a></p>
-
-              <br>
-
-              <p>As a researcher, I was given 10 hours to complete the project over the span of 2 to 3 weeks. I created a schedule which allowed me to complete the large project regardless of the limited time. My schedule comprised of smaller tasks of all the things that I needed to get done to complete the overall research project. For example, the first step was to figure out which platform or software I would need to work with the Kinect and the Oculus Rift. I followed through on my commitments by going to the lab regularly and on time. Just like any research project, I was bound to run into various problems, but I quickly reacted and responded to these technical difficulties by using my resources and skills in the field.</p>
-
+              <p>As a researcher, I was given 10 hours to complete one project. I created a schedule that allowed me to complete the large project despite the  limited time. For example, the first step was to figure out which platform or software I would need to work with the Kinect and the Oculus Rift. Unity3D quickly came up in my google queries and I saw that there was a large online community, so I knew that if I ran into an issue, I could find an answer there. So, I downloaded it and set up my environment.</p>
               <br>
 
               <center><img style="width: 90%;" src="assets/img/experiences/reap/reaplab.jpg"></center>
 
               <br>
-
-              <p> Some of these resources included searching the web for information from other developers who tried to build similar scenarios for the Oculus Rift and the Kinect, or asking my supervisor for help from people in the lab who worked with the equipment I used. My supervisor also gave me some emails of professors I contacted. I planned meetings with them and told them the issues I came across and listened to their advice. If I encountered issues that had not been previously solved, I persistently worked through them, trying every possible solution I could think of. If I got stuck on an issue I strategically took breaks to work on other aspects of the research project. After a break, I revisited the issue until I solved them or recorded what I knew about them. Throughout the whole process, I regularly assessed my work and updated my supervisor to make sure everything ran smoothly.</p>                     
-
+              <p>As you can see above, I quickly ran into some errors. If I ran into an unsolved issue by other developers on the web, who tried to build similar scenarios for the Oculus Rift and the Kinect, I bounced ideas of professors in the lab who were also passionate about VR. I revisited the issue until I solved them or recorded what I knew about them for future research students to refer to.</p>
               <br>
 
               <center><img style="width: 90%;" src="assets/img/experiences/reap/reapmain.jpg"></center>
 
               <br>
-
-
-              <p> All my goals and deadlines were met in a timely manner; and as a result, I was able to successfully combine the Oculus Rift with the Kinect. I reviewed my work and wrote a blog post on what I learned, and what could be done in the future if I continued the project. During the VR project, I learned that the Kinect is not a very accurate tool for the detection of body positioning. This project helped me realize that I would love to look into new technology which could accomplish tasks similar to those carried out by the Kinect. My perseverance in the face of pitfalls aided me in learning many technical skills that I applied in my next project on optimizing user interface design for VR.</p>
-
-
-              
+              <p>All my goals and deadlines were met in a timely manner; as a result,  I was able to successfully combine the Oculus Rift with the Kinect. I shared a blog post on what I learned, and what could be done in the future if the project were to be continued. During the VR project, I learned that the Kinect is not a very accurate tool for the detection of body positioning creating a not as enjoyable user experience so opting for other technologies such as the Leap Motion could be a better alternative. My perseverance in the face of pitfalls aided me in learning many technical skills that I applied in my next project on optimizing user interface design for VR.</p>
             </div>
           </div>   
         </div>
