--- a/ExperienceTC.html
+++ b/ExperienceTC.html
@@ -116,7 +116,7 @@
 
 
               <h4 style="font-size: 24px">My Role at Trusted Clothes</h4>
-              <p>As a summer student intern I was responsible for redesigning the <a target="_blank" href="https://www.trustedclothes.com">website</a>, SEO, and blog content editing.</p>
+              <p>As a summer student intern I was responsible for redesigning the <a target="_blank" href="https://www.trustedclothes.com">website</a>, search engine optimization, and blog content editing.</p>
 
               <br>
 
@@ -204,26 +204,27 @@
               <p>Before I picked up any projects I did extensive research on non-profit organization website designs. I then created a content audit of the current website that I was working on that could easily be updated through Confluence. I assigned tasks to myself, content writers and programmers through Jira.</p>
               <br>
               <div style="padding-left: 10px;">
-              <p><b>Define the problem: </b>As a UX strategist I started working on each assignment by first understanding the problem and defining it. This step allows me to work more efficiently and understand the user's and team lead's need. </p>
-              <p><b>Research: </b>I gathered data on the website usage from Google Analytics, analyises good and bad qualities from our competitors, interviewed some users, and reviewed previous design itterations. </p>
-              <p><b>Brainstorm solutions: </b>Based off of the research, I wrote down various solutions and analyzed the benefits and drawbacks of each solution. </p>
-              <p><b>Develop mockups and/or prototypes: </b>I started by using pen and paper prototypes, then I redesigned the successful designs on Illustrator, and shared the documents with the front end web developper.</p>
+              <p><b>Define the problem: </b>As a UX strategist I started working on each assignment by first understanding the problem and defining it. This step allows me to work more efficiently and understand the user's and team lead's needs.</p>
+              <p><b>Research: </b>I gathered data on the website usage from Google Analytics, analyzed good and bad qualities from our competitors, interviewed some users, and reviewed previous design iterations. </p>
+              <p><b>Brainstorm solutions: </b>Based off of the research, I wrote down various solutions and analyzed the benefits and drawbacks of each solution.</p>
+              <p><b>Develop mockups and/or prototypes: </b>I started by using pen and paper prototypes, then I redesigned the successful designs on Illustrator, and shared the designs with the front-end web developer.</p>
               <p><b>Test: </b> Implementations were tested in the office with volunteer users and through Google Analytics.</p>
               <p><b>Improve and reiterate: </b>Data from the user testing was gathered to improve designs and concepts.</p>
               </div>
 
               <br>
 
-              <center><img style="width: 90%;" src="assets/img/experiences/TC/blog.png"></center>
+              <center><img style="width: 85%;" src="assets/img/experiences/TC/blog.png"></center>
+              <div style="font-size: 11px; text-align: center;"> <i>One of my mockups for our blog section where highschool volunteers write posts about the current issues with our clothing industry.</i></div>
 
               <br>
 
               <h4 style="font-size: 24px">Future Improvements</h4>
-              <p>Since everyone on the team was new and it was our first time working on web develpment we did not know how to implement a clear and efficient workflow until a few weeks into our internships. If I were to work again on a web development team I would ask the team members if they have a workflow system that has worked efficiently for them and if not I would share a posible system for the team. The team progress would be tracked and by the end of each week it would be good to have a meeting to see what worked well and what could be improved. This keeps everyone on the same page and minimizes confusion and miscommunication within teams.</p>
+              <p>Since everyone on the team was new and it was our first time working on web development we did not know how to implement a clear and efficient workflow until a few weeks into our internships. If I were to work again on a web development team I would ask the team members if they have a workflow system that has worked efficiently for them and if not I would share a possible system for the team. The team progress would be tracked and by the end of each week it would be good to have a meeting to see what worked well and what could be improved. This keeps everyone on the same page and minimizes confusion and miscommunication within teams.</p>
 
               <br>
 
-              <p style="font-size: 18px">To view the website please visit <a href="https://www.trustedclothes.com">Trusted Clothes</a></p>
+              <p style="font-size: 14px">To view my website redesign please visit <a href="https://www.trustedclothes.com">Trusted Clothes</a>.</p>
 
             </div>
           </div>   
