--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -106,7 +106,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h4 style="font-size: 24px">What is Care Connector? </h4>
-              <p>Care Connector is a clinical communication and collaboration platform developed at Trillium Health Partners (THP) to support interprofessional and patient centred care.  The goal is to allow physicians, nurses, and allied health staff to work in teams and provide more effective and efficient care enabled through improved communication.</p>
+              <p>Care Connector is a clinical communication and collaboration platform developed at Trillium Health Partners (THP) to support interprofessional and patient-centred care.  The goal is to allow physicians, nurses, and allied health staff to work in teams and provide more effective and efficient care enabled through improved communication.</p>
 
               <br>
 
@@ -178,7 +178,7 @@
                           </li>
                           <li>
                             <div class="content-text">
-                              <h3 class="line-title">Scrum Master-ing</h3>
+                              <h3 class="line-title">Scrum Mastering</h3>
                             </div>
                           </li>
                         </ul>
@@ -192,27 +192,27 @@
 
               <h4 style="font-size: 24px">My Journey with the Care Connector Team</h4><br>
 
-              <p>I started at Care Connector as a co-op student hired to test UI conponents and then redesign front-end conponents. </p> 
+              <p>I started at Care Connector as a co-op student hired to test UI components and then redesign front-end components. </p> 
 
               <br>
 
-              <p> However, leading up to my first day I was nervous about working in a hospital. I am quite scared of needles and I knew I would have to sometimes walk around in the units where Care Connector is running to conduct deployment test and usabilty tests. I definately did not want to faint on the job!</p>
+              <p> However, leading up to my first day I was nervous about working in a hospital. I am quite scared of needles and I knew I would have to sometimes walk around in the units where Care Connector is running to conduct deployment test and usability tests. I definitely did not want to faint on the job!</p>
               <br>
 
-              <p>What kept me going was that I knew that if managed to get through the summer I knew I would have overcome my fears and been able to give back to my community by making the lives of patients and care team members a bit better by improving the user interfaces of the software they use on a daily basis.</p>
+              <p>What kept me going was that I knew that if I managed to get through the summer I would have overcome my fears and been able to give back to my community by making the lives of patients and care team members a bit better by improving the user interfaces of the software they use on a daily basis.</p>
               <br>
 
-              <p>Little did I know that this was not the only challenge I would go through. Throughout the summer I had to teach myself object oriented programming, while a project manager resigned and my boss got fired...</p>
+              <p>Little did I know that this was not the only challenge I would go through. Throughout the summer I had to teach myself object oriented programming, while a project manager resigned and my boss left the institution.</p>
               <br>
 
-              <p>When my team was cut by almost in half, we all persevered and stayed positive (going to the an axe throughing range definately helped). I even had the opportunity to lead the team through one Sprint over 2 weeks. This experience eventually made our team much stronger by properly communicating with eachother and working efficiently with the tools that we had. It allowed us to reasses how we invisioned Care Connector to be and set our goals for the project.</p>
+              <p>When my team was cut by almost half, we all persevered and stayed positive (going to an axe throwing range helped). I even had the opportunity to lead the team through one Sprint over two weeks. This experience eventually made our team much stronger by properly communicating with each other and working efficiently with the tools that we had. It allowed us to reassess how we envisioned Care Connector and set our goals for the project.</p>
               <br>
 
               <center><img style="width: 70%;" src="assets/img/experiences/THP/team.jpg"></center>
 
               <br>
 
-              <p>I ended up learning so much from the change management process and really enjoyed working with the team and decided to continue working part-time. Up to now I have worked on several projects from developing AI chatbots, to adding a new module from start to end. Seeing a project through required writing requirement documents, mockups, developing, deploying, testing, presenting it with stakeholders, and reiiterating. <a href="index.html#contact">Ask me about my experience creating a test suite and module requirements</a>. </p>
+              <p>I ended up learning so much from the change management process and really enjoyed working with the team, so I agreed to continue working part-time. Up to now I have worked on several projects from developing AI chatbots to adding a new module from start to end. Seeing a project through involved writing requirement documents, designing mockups, developing, deploying, testing, presenting to stakeholders, and reiterating through the design process. <a href="index.html#contact">Ask me about my experience creating a test suite and module requirements</a>. </p>
               
 
             </div>
