--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -113,12 +113,13 @@
               <br>
 
               <center><img style="width: 90%;" src="assets/img/experiences/reap/reapgroup.png"></center>
+              <div style="font-size: 11px; text-align: center;">
+              <i>Outside of the research projects I had an opportunity to go to workshops hosted by REAP in their lab.</i></div>
 
               <br>
               <br>
               <h4 style="font-size: 24px">My Role at REAP</h4>
-               <p>I was granted the opportunity to pursue my own research projects using any of the technology offered in the lab. For my first project, I explored combining the Oculus Rift with the Kinect to allow mobility and control in a virtual universe, since I was drawn to finding applications for virtual reality (VR). <a href="http://www.reapwaterloo.ca/combining-microsoft-kinect-oculus-rift-unity3d/#more-362">Read article</a></p>
-
+               <p>I was granted the opportunity to pursue my own research projects using any of the technology offered in the lab. For my first project, I explored combining the Oculus Rift with the Kinect to allow mobility and control in a virtual universe, since I was drawn to finding applications for virtual reality (VR).
               <br>
 
               <!-- Lists -->
@@ -159,7 +160,7 @@
                           </li>
                           <li>
                             <div class="content-text">
-                              <h3 class="line-title">User Testing</h3>
+                              <h3 class="line-title">Usabilty Testing</h3>
                             </div>
                           </li>
                           <li>
@@ -193,7 +194,7 @@
               <center><img style="width: 90%;" src="assets/img/experiences/reap/reapmain.jpg"></center>
 
               <br>
-              <p>All my goals and deadlines were met in a timely manner; as a result,  I was able to successfully combine the Oculus Rift with the Kinect. I shared a blog post on what I learned, and what could be done in the future if the project were to be continued. During the VR project, I learned that the Kinect is not a very accurate tool for the detection of body positioning creating a not as enjoyable user experience so opting for other technologies such as the Leap Motion could be a better alternative. My perseverance in the face of pitfalls aided me in learning many technical skills that I applied in my next project on optimizing user interface design for VR.</p>
+              <p>All my goals and deadlines were met in a timely manner; as a result,  I was able to successfully combine the Oculus Rift with the Kinect and conduct usability testing on the immersive VR experience. I shared a blog post on what I learned, and what could be done in the future if the project were to be continued. During the VR project, I learned that the Kinect is not a very accurate tool for the detection of body positioning creating a not as enjoyable user experience so opting for other technologies such as the Leap Motion could be a better alternative. My perseverance in the face of pitfalls aided me in learning many technical skills that I applied in my next project on optimizing user interface design for VR.</p>
             </div>
           </div>   
         </div>
