--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -250,6 +250,12 @@
                   <a class="instagram" href="https://ca.linkedin.com/in/amydebbane"><i class="icon-social-linkedin"></i></a>
                 </li>
               </ul>
+              <div class="footer-text text-center">
+                <a href="index.html#services">Experiences |</a>
+                <a href="index.html#about"> About |</a>
+                <a href="index.html#contact"> Contact</a>
+              
+              </div>
               <p>© 2018 by Amy Debbané</p>
             </div>
           </div>
