--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -121,7 +121,7 @@
                         <div class="education wow fadeInRight" data-wow-delay="0.3s">
                           <ul class="timeline">
                             <li>
-                              <i class="icon-graduation"></i>
+                              <i class="fa fa-wrench"></i>
                               <h2 class="timelin-title">Tools Used</h2>
                             </li>
                             <li>
