--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -131,7 +131,7 @@
                       <div class="education wow fadeInRight" data-wow-delay="0.3s">
                         <ul class="timeline">
                           <li>
-                            <i class="fa fa-wrenc"></i>
+                            <i class="fa fa-wrench"></i>
                             <h2 class="timelin-title">Tools Used</h2>
                           </li>
                           <li>
