--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -215,6 +215,13 @@
                 <p>What kept me going was that I knew that if I managed to get through the summer I would have overcome my fears and been able to give back to my community by making the lives of patients and care team members a bit better by improving the user interfaces of the software they use on a daily basis.</p>
                 <br>
 
+                 <br>
+
+                <center><img style="width: 95%;" src="assets/img/experiences/THP/ehrex.png"></center>
+                <div style="font-size: 11px; text-align: center;"> <i>Improving tranfers of electronic health records (EHRs)</i></div>
+
+                <br>
+
                 <p>Little did I know that this was not the only challenge I would go through. Throughout the summer I had to teach myself object oriented programming, while a project manager resigned and my boss left the institution.</p>
                 <br>
 
