--- a/ExperienceTC.html
+++ b/ExperienceTC.html
@@ -253,7 +253,7 @@
           <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
-                <i class="icon-layers"></i>
+                <img src="assets/img/iconresearch.jpg">
               </div>
               <div class="services-content">
                 <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
@@ -265,7 +265,7 @@
           <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
-                <i class="icon-bubbles"></i>
+                <img src="assets/img/iconresearch.jpg">
               </div>
               <div class="services-content">
                 <h3><a href="ExperienceREAP.html">UX Researcher</a></h3>
