--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -251,7 +251,7 @@
             <div class="col-md-6 col-lg-6 col-xs-12">
               <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
                 <div class="icon">
-                  <i class="icon-layers"></i>
+                  <img src="assets/img/iconstrategy.jpg">
                 </div>
                 <div class="services-content">
                   <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
@@ -263,7 +263,7 @@
             <div class="col-md-6 col-lg-6 col-xs-12">
               <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
                 <div class="icon">
-                  <i class="icon-bubbles"></i>
+                  <img src="assets/img/iconresearch.jpg">
                 </div>
                 <div class="services-content">
                   <h3><a href="ExperienceREAP.html">UX Researcher</a></h3>
