--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -234,7 +234,7 @@
           <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
-                <i class="icon-bubbles"></i>
+                <img src="assets/img/iconstrategy.jpg">
               </div>
               <div class="services-content">
                 <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
