--- a/ExperienceTC.html
+++ b/ExperienceTC.html
@@ -253,7 +253,7 @@
           <div class="col-md-6 col-lg-6 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
-                <img src="assets/img/iconresearch.jpg">
+                <img src="assets/img/ux-dev.jpg">
               </div>
               <div class="services-content">
                 <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
