--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -232,7 +232,7 @@
 
                 <br>
 
-                <p>I ended up learning so much from the change management process and really enjoyed working with the team, so I agreed to continue working part-time. Up to now I have worked on several projects from developing AI chatbots to adding a new module from start to end. Seeing a project through involved writing requirement documents, designing mockups, developing, deploying, testing, presenting to stakeholders, and reiterating through the design process. <a href="index.html#contact">Ask me about my experience creating a test suite and module requirements</a>. </p>
+                <p>I ended up learning so much from the change management process and really enjoyed working with the team, so I agreed to continue working part-time. Up to now I have worked on several projects from developing AI chatbots to adding a new module from beginning to end. Seeing a project through involved writing requirement documents, designing mockups, developing, deploying, testing, presenting to stakeholders, and reiterating through the design process. <a href="index.html#contact">Ask me about my experience creating a test suite and module requirements</a>. </p>
                 
 
               </div>
