--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -209,7 +209,7 @@
 
                 <br>
 
-                <p> However, leading up to my first day I was nervous about working in a hospital. I am quite scared of needles and I knew I would have to sometimes walk around in the units where Care Connector is running to conduct deployment test and usability tests. I definitely did not want to faint on the job!</p>
+                <p> However, leading up to my first day I was nervous about working in a hospital. I am quite scared of needles and I knew I would have to sometimes walk around in the units where Care Connector is running to conduct deployment testing and usability tests. I definitely did not want to faint on the job!</p>
                 <br>
 
                 <p>What kept me going was that I knew that if I managed to get through the summer I would have overcome my fears and been able to give back to my community by making the lives of patients and care team members a bit better by improving the user interfaces of the software they use on a daily basis.</p>
