--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -205,7 +205,7 @@
               <center><img style="width: 90%;" src="assets/img/experiences/reap/reapmain.jpg"></center>
 
               <br>
-              <p>All my goals and deadlines were met in a timely manner; as a result,  I was able to successfully combine the Oculus Rift with the Kinect and conduct usability testing on the immersive VR experience. I shared a blog post on what I learned, and what could be done in the future if the project were to be continued. During the VR project, I learned that the Kinect is not a very accurate tool for the detection of body positioning creating a not as enjoyable user experience so opting for other technologies such as the Leap Motion could be a better alternative. My perseverance in the face of pitfalls aided me in learning many technical skills that I applied in my next project on optimizing user interface design for VR.</p>
+              <p>All my goals and deadlines were met in a timely manner; as a result,  I was able to successfully combine the Oculus Rift with the Kinect and conduct usability testing on the immersive VR experience. I shared a blog post on what I learned, and what could be done in the future if the project were to be continued. During the VR project, I learned that the Kinect is not a very accurate tool for the detection of body positioning, creating a not as enjoyable user experience so opting for other technologies such as the Leap Motion could be a better alternative. My perseverance in the face of pitfalls aided me in learning many technical skills that I applied in my next project on optimizing user interface design for VR.</p>
             </div>
           </div>   
         </div>
