--- a/index.html
+++ b/index.html
@@ -154,44 +154,50 @@
       <div class="container">
         <div class="row">
           <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-4">
-            <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
-              <div class="icon">
-                <img src="assets/img/ux-dev.jpg">
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
-                <p>Trillium Health Partners</p>
-                <p><i>May 2018 - PRESENT</i></p>
+          <a href="ExperienceTHP.html">
+            <div class="col-md-4 col-lg-4 col-xs-4">
+              <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
+                <div class="icon">
+                  <img src="assets/img/ux-dev.jpg" href="ExperienceTHP.html">
+                </div>
+                <div class="services-content">
+                  <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
+                  <p>Trillium Health Partners</p>
+                  <p><i>May 2018 - PRESENT</i></p>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <!-- Experience item -->
-          <div class="col-md-4 col-lg-4 col-xs-4">
-            <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
-              <div class="icon">
-                <img src="assets/img/iconstrategy.jpg">
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
-                <p>Trusted Clothes</p>
-                <p><i>June 2017 - August 2017</i></p>
+          <a href="ExperienceTC.html">
+            <div class="col-md-4 col-lg-4 col-xs-4">
+              <div class="services-item wow fadeInDown" data-wow-delay="0.8s">
+                <div class="icon">
+                  <img src="assets/img/iconstrategy.jpg" href="ExperienceTC.html">
+                </div>
+                <div class="services-content">
+                  <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
+                  <p>Trusted Clothes</p>
+                  <p><i>June 2017 - August 2017</i></p>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <!-- Services item -->
-          <div class="col-md-4 col-lg-4 col-xs-4">
-            <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
-              <div class="icon">
-                <img src="assets/img/iconresearch.jpg">
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceREAP.html">UX Researcher</a></h3>
-                <p>University of Waterloo</p>
-                <p><i>September 2015 - December 2016</i></p>
+          <a href="ExperienceREAP.html">
+            <div class="col-md-4 col-lg-4 col-xs-4">
+              <div class="services-item wow fadeInDown" data-wow-delay="0.75s">
+                <div class="icon">
+                  <img src="assets/img/iconresearch.jpg">
+                </div>
+                <div class="services-content">
+                  <h3><a href="ExperienceREAP.html">UX Researcher</a></h3>
+                  <p>University of Waterloo</p>
+                  <p><i>September 2015 - December 2016</i></p>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <!-- Experience item -->
         </div>
       </div>
