--- a/ExperienceTHP.html
+++ b/ExperienceTHP.html
@@ -250,29 +250,33 @@
         <div class="container">
           <div class="row">
             <!-- Experience item -->
-            <div class="col-md-6 col-lg-6 col-xs-12">
-              <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
-                <div class="icon">
-                  <img src="assets/img/iconstrategy.jpg">
-                </div>
-                <div class="services-content">
-                  <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
-                  <p>Trusted Clothes</p>
+            <a href="ExperienceTC.html">
+              <div class="col-md-6 col-lg-6 col-xs-12">
+                <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
+                  <div class="icon">
+                    <img src="assets/img/iconstrategy.jpg">
+                  </div>
+                  <div class="services-content">
+                    <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
+                    <p>Trusted Clothes</p>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- Experience item -->
-            <div class="col-md-6 col-lg-6 col-xs-12">
-              <div class="services-item wow fadeInDown" data-wow-delay="0.8s">
-                <div class="icon">
-                  <img src="assets/img/iconresearch.jpg">
-                </div>
-                <div class="services-content">
-                  <h3><a href="ExperienceREAP.html">UX Researcher</a></h3>
-                  <p>REAP</p>
+            <a href="ExperienceREAP.html">
+              <div class="col-md-6 col-lg-6 col-xs-12">
+                <div class="services-item wow fadeInDown" data-wow-delay="0.8s">
+                  <div class="icon">
+                    <img src="assets/img/iconresearch.jpg">
+                  </div>
+                  <div class="services-content">
+                    <h3><a href="ExperienceREAP.html">UX Researcher</a></h3>
+                    <p>REAP</p>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
             <!-- Experience item -->
           </div>
         </div>
