--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -220,29 +220,33 @@
       <div class="container">
         <div class="row">
           <!-- SExperience item -->
-          <div class="col-md-6 col-lg-6 col-xs-12">
-            <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
-              <div class="icon">
-                <img src="assets/img/ux-dev.jpg">
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
-                <p>Trillium Health Partners</p>
+          <a href="ExperienceTHP.html">
+            <div class="col-md-6 col-lg-6 col-xs-12">
+              <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
+                <div class="icon">
+                  <img src="assets/img/ux-dev.jpg">
+                </div>
+                <div class="services-content">
+                  <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
+                  <p>Trillium Health Partners</p>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <!-- SExperience item -->
-          <div class="col-md-6 col-lg-6 col-xs-12">
-            <div class="services-item wow fadeInDown" data-wow-delay="0.8s">
-              <div class="icon">
-                <img src="assets/img/iconstrategy.jpg">
-              </div>
-              <div class="services-content">
-                <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
-                <p>Trusted Clothes</p>
+          <a href="ExperienceTC.html">
+            <div class="col-md-6 col-lg-6 col-xs-12">
+              <div class="services-item wow fadeInDown" data-wow-delay="0.8s">
+                <div class="icon">
+                  <img src="assets/img/iconstrategy.jpg">
+                </div>
+                <div class="services-content">
+                  <h3><a href="ExperienceTC.html">UX Strategist Intern</a></h3>
+                  <p>Trusted Clothes</p>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
           <!-- Experience item -->
         </div>
       </div>
