--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -90,12 +90,12 @@
       <!-- Navbar End -->
 
       <!-- Hero Area Start -->
-      <div id="hero-area" class="hero-area-bg">
+      <div id="hero-area" class="hero-area-reap">
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
             <div class="col-md-12 col-sm-12 text-center">
-              <div class="contents"> 
+              <div class="contentssm"> 
                 <br>
                 <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Student UX Researcher</h2>               
                 <p class="wow fadeInUp" data-wow-delay="0.6s">
