--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </script>
 
   </head>
-  <body id="body">
+  <body>
 
     <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
