--- a/ExperienceREAP.html
+++ b/ExperienceREAP.html
@@ -182,7 +182,7 @@
                           </li>
                           <li>
                             <div class="content-text">
-                              <h3 class="line-title">Writen and Oral Communication</h3>
+                              <h3 class="line-title">Written and Oral Communication</h3>
                             </div>
                           </li>
                         </ul>
