--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="col-xs-12 col-sm-4">
                       <div class="box">
                         <p class="wow fadeInUp" data-wow-delay="0.7s">UX Strategist</p>
-                        <section  class="wow fadeInUp"  data-wow-delay="0.7s" > <p style="font-size: 16px;">I use design thinking to creatively solve ineffective user interactions.<p></section>
+                        <section  class="wow fadeInUp"  data-wow-delay="0.7s" > <p style="font-size: 16px;">I use design thinking to creatively solve user interaction challenges.<p></section>
                       </div>
                     </div>
                     
@@ -163,7 +163,7 @@
                 <div class="services-content">
                   <h3><a href="ExperienceTHP.html">UX Developer</a></h3>
                   <p>Trillium Health Partners</p>
-                  <p><i>May 2018 - PRESENT</i></p>
+                  <p><i>May 2018 - April 2019</i></p>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@
               <br>
                <p>I eventually interned at Trillium Health Partners as a UX developer. However, teaching myself development was not all rainbows and butterflies. Whenever I came accross a road block I would go to a nearby park helping me take a step back and look at the bigger picture. My time to the park turned into an office step challenge which was a great team building activity.</p>
             <br>
-            <a target="_blank" href="assets/resume_summer2019.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
+            <a target="_blank" href="assets/resume.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
             <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i>  Contact Me</a>
             </div> 
           </div>
