--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <li>
                 </ul>
                 <p class="wow fadeInUp" data-wow-delay="0.6s">
-                  UX Developer
+                  Human-Computer Interaction Researcher
                   <br>
                   merging design thinking with software development
                 </p>
@@ -218,11 +218,11 @@
             <div class="wow fadeInRight" data-wow-delay="0.3s">
               <h3>My Journey</h3>
               <br> 
-              <p>Driven by curiosity, I decided to go to a hackathon (where large groups of students pull all-nighters and create fun projects) to see what all the hype was about! At <a href="https://devpost.com/software/wanderlust-a-visual-and-interactive-way-to-wander" target="_blank">Hack the North 2016</a>, I delighted in bringing my designs to life through code. I am fascinated by how people think, behave and work, and how technology impacts our daily lives.</p>
+              <p>Driven by curiosity, I decided to go to a hackathon (where students gather, pull all-nighters and create fun projects) to see what all the hype was about! At <a href="https://devpost.com/software/wanderlust-a-visual-and-interactive-way-to-wander" target="_blank">Hack the North 2016</a>, I delighted in bringing my designs to life through code. I am fascinated by how people think, behave and work, and how technology impacts our daily lives.</p>
               <br>
-              <p> My next goal was to eventually get an internship as developer where I continue to practice UX skills.</p>
+              <p> My next goal was to gain experience as a developer intern where I would be able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in research grew.</p>
               <br>
-               <p>I eventually interned at Trillium Health Partners as a UX developer. However, teaching myself development was not all rainbows and butterflies. Whenever I came accross a road block I would go to a nearby park helping me take a step back and look at the bigger picture. My time to the park turned into an office step challenge which was a great team building activity.</p>
+               <p>Currently, I am pursuing a Master of Math in Computer Science focusing in Human-Computer Interaction at the University of Waterloo.</p>
             <br>
             <a target="_blank" href="assets/resume.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
             <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i>  Contact Me</a>
@@ -252,13 +252,7 @@
                         <div class="contact-icon">
                            <i class="fa fa-envelope"></i>
                         </div>
-                        <p><a href="mailto:amy.debbane@gmail.com">amy.debbane@gmail.com</a></p>
-                     </div>
-                     <div class="single-contact">
-                        <div class="contact-icon">
-                           <i class="fa fa-phone"></i>
-                        </div>
-                        <p><a href="tel:1-613-618-7076">+ (1) 613-618-7076</a></p>
+                        <p><a href="https://www.linkedin.com/in/amydebbane/">https://www.linkedin.com/in/amydebbane/</a></p>
                      </div>
                   </div>
                </div>
