--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
             <div class="wow fadeInRight" data-wow-delay="0.3s">
               <h3>My Journey</h3>
               <br> 
-              <p>Driven by curiosity, I decided to go to a hackathon (where students gather, pull all-nighters and create fun projects) to see what all the hype was about! At <a href="https://devpost.com/software/wanderlust-a-visual-and-interactive-way-to-wander" target="_blank">Hack the North 2016</a>, I delighted in bringing my designs to life through code. I am fascinated by how people think, behave and work, and how technology impacts our daily lives.</p>
+              <p>Driven by curiosity, I decided to go to a hackathon (where students gather, pull all-nighters and create fun projects) to see what all the hype was about! At <a href="https://devpost.com/software/wanderlust-a-visual-and-interactive-way-to-wander" target="_blank">Hack the North 2016</a>, I delighted in bringing my designs to life through code.</p>
               <br>
-              <p> My next goal was to gain experience as a developer intern where I would be able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in research grew.</p>
+              <p>I am fascinated by how people think, behave and work, and how technology impacts our daily lives. Therefore, my next goal was to gain experience as a developer intern while being able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in research grew.</p>
               <br>
-               <p>Currently, I am pursuing a Master of Math in Computer Science focusing in Human-Computer Interaction at the University of Waterloo.</p>
+               <p>Currently, I am pursuing a Master of Math in Computer Science focusing in <a href="http://hci.cs.uwaterloo.ca/" target="_blank">Human-Computer Interaction at the University of Waterloo</a>, where I am advised by <a href="http://edithlaw.ca/" target="_blank">Dr. Edith Law</a>.</p>
             <br>
             <a target="_blank" href="assets/resume.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
             <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i>  Contact Me</a>
