--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <br> 
               <p>Driven by curiosity, I decided to go to a hackathon (where students gather, pull all-nighters and create fun projects) to see what all the hype was about! At <a href="https://devpost.com/software/wanderlust-a-visual-and-interactive-way-to-wander" target="_blank">Hack the North 2016</a>, I delighted in bringing my designs to life through code.</p>
               <br>
-              <p>I am fascinated by how people think, behave and work, and how technology impacts our daily lives. Therefore, my next goal was to gain experience as a developer intern while being able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in research grew.</p>
+              <p>I am fascinated by how people think, behave and work, and how technology impacts our daily lives. Therefore, my next goal was to gain experience as a developer intern while being able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in conducting user research grew.</p>
               <br>
                <p>Currently, I am pursuing a Master of Math in Computer Science focusing in <a href="http://hci.cs.uwaterloo.ca/" target="_blank">Human-Computer Interaction at the University of Waterloo</a>, where I am advised by <a href="http://edithlaw.ca/" target="_blank">Dr. Edith Law</a>.</p>
             <br>
