--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <div class="contact-icon">
                            <i class="fa fa-envelope"></i>
                         </div>
-                        <p><a href="https://www.linkedin.com/in/amydebbane/">https://www.linkedin.com/in/amydebbane/</a> or href="https://www.behance.net/amydebbane/">https://www.behance.net/amydebbane</a></p>
+                        <p><a href="https://www.linkedin.com/in/amydebbane/">https://www.linkedin.com/in/amydebbane/</a> or <a href="https://www.behance.net/amydebbane/">https://www.behance.net/amydebbane</a></p>
                      </div>
                   </div>
                </div>
